# Qtcptransfile

./: CMakeLists.txt  ClientOperate.cpp  ClientOperate.h  ClientWidget.cpp  ClientWidget.h  ClientWidget.ui  README.md  ServerOperate.cpp  ServerOperate.h  ServerWidget.cpp  ServerWidget.ui  clientfiletrans.cpp  clientfiletrans.h  main.cpp  serverfiletrans.cpp  socketthread.cpp  socketthread.h  tcptest.cpp  tcptest.h  tcptest.ui
package/: ClientOperate.cpp  ClientOperate.h  ServerOperate.cpp  ServerOperate.h  clientfiletrans.h  serverfiletrans.cpp
